--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE HTML>
 <head>
 <link href="styles/style.css" rel="stylesheet">
+<title>
+  Home | Schoology
+  </title>
 </head>
 <body>
 <h1>
