--- a/index.html
+++ b/index.html
@@ -2,18 +2,10 @@
 <head>
 <link href="styles/style.css" rel="stylesheet">
   <link rel="shortcut icon" href="https://asset-cdn.schoology.com/sites/all/themes/schoology_theme/favicon.ico" type="image/x-icon">
-<title>
-  Home | Schoology
-  </title>
+<title> Home | Schoology </title>
 </head>
 <body>
-<h1>
-Welcome to the revamped ZigZ0g site.
-</h1>
-<h2>
-List of pages
-</h2>
-<p>
-None yet, will be added soon.
-<p>
+<h1>Welcome to the revamped ZigZ0g site</h1>
+<h2>List of pages</h2>
+<p>None yet, will be added soon.</p>
 </body>
