--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <link href="styles/style.css" rel="stylesheet">
   <link rel="shortcut icon" href="https://asset-cdn.schoology.com/sites/all/themes/schoology_theme/favicon.ico" type="image/x-icon">
 <title> Home | Schoology </title>
-  <script src="js/image.js"></script>
+<script type="text/javascript" src="image.js"></script>
 </head>
 <body>
 <h1>Welcome to the revamped ZigZ0g site</h1>
