--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ newImg.src = 'https://raw.githubusercontent.com/zigz0g/zzrevamp/main/img/Capture
   </script>
 </head>
 <body>
-<h1>Welcome to the revamped ZigZ0g site</h1>
+<h1>Welcome!</h1>
 <h2>List of pages</h2>
 <p>None yet, will be added soon.</p>
 </body>
